<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_item_main"
            android:icon="@drawable/ic_home_black"
            android:title="@string/navigation_main"/>
        <item
            android:id="@+id/navigation_item_appscanning"
            android:icon="@drawable/ic_security_black"
            android:title="@string/navigation_appscanning" />
        <item
            android:id="@+id/navigation_item_record"
            android:icon="@drawable/ic_record_black"
            android:title="@string/navigation_record" />
        <item
            android:id="@+id/navigation_item_whitelisting"
            android:icon="@drawable/ic_whitelist_black"
            android:title="@string/navigation_whitelisting" />

    </group>

</menu>