<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">
        <include
            android:id="@+id/appbar"
            layout="@layout/include_toolbar" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            tools:targetApi="LOLLIPOP">

            <ImageView
                android:id="@+id/iv_main_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_main_circle_bg"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@null"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/iv_main_bg_anim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@null"
                android:background="@drawable/ic_main_circle_white"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/tv_text_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/open_service"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/iv_security_bg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:background="@drawable/ic_security_white"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/tv_show_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bt_close"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:text="@string/is_open"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/bt_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/close"
                style="@style/ButtonScan"
                android:visibility="invisible"/>

        </RelativeLayout>


    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/drawer" />

</android.support.v4.widget.DrawerLayout>

